@@ -1,3 +1,7 @@
+2002-09-22  Marcus Brinkmann  <marcus@gnu.org>
+
+	* pc-kbd.c (sc_to_kc): Implement Meta-Backspace combinations.
+
 2002-09-19  Marcus Brinkmann  <marcus@gnu.org>
 
 	* vga-support.c (vga_read_write_font_buffer): New function.  It
